# angband

./: .gitignore  AGENTS.md  ARCHITECTURE.md  KERNEL_MITIGATIONS.md  README.md  TESTING.md  cleanup.sh  cli.py  pyproject.toml  run_and_verify.sh
angband/: __init__.py  cli.py  runtime.py
configs/: ubuntu-24.04-x86_64.yaml  ubuntu-26.04-x86_64.yaml
core/: engine.py
docs/: CVE-2026-23112-analysis.md  CVE-2026-23209-analysis.md  CVE-2026-33289-analysis.md  CVE-2026-35555-analysis.md  CVE-2026-44269-analysis.md  aeg-research.md  attack-surface.md  bug-class-taxonomy.md  cpu_sidechannel_attacks_reference.md  heap-exploitation.md  index.md  manual_build.md  mitigations-defense.md  novel-techniques.md  primitives.md  vkb.md
sidewinder/: AGENTS.md  README.md  cleanup.sh  pyproject.toml
sidewinder/c_primitives/: Makefile  cache.c  exploit_verify.c  hammer.c  hertzbleed.c  memory.c  sidewinder.h  test_getspnam_speculative  test_getspnam_speculative.c  test_getspnam_timing  test_getspnam_timing.c  timer.c  tsa_probe.c
sidewinder/src/sidewinder/: __init__.py  cli.py
sidewinder/src/sidewinder/detector/: cpu.py  dram.py  mitigation.py  profile.py
sidewinder/src/sidewinder/exploit/: cred_leak.py  kaslr.py  ml_classifier.py  ml_collector.py  ml_enhanced.py  ml_tsa_classifier.py  pte_flip.py  verify.py  vmscape.py
sidewinder/src/sidewinder/primitives/: native.py
sidewinder/src/sidewinder/probe/: cache_side.py  dram_re.py  hertzbleed.py  rowhammer.py  speculative.py  zenhammer.py
sidewinder/src/sidewinder/report/: reporter.py
sidewinder/src/sidewinder/utils/: system.py
(+182 files in other folders)
